--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cq8i25uehbks738kma8g-a.oregon-postgres.render.com/notedatabasetalmon
+spring.datasource.url=jdbc:postgresql://dpg-cq8i25uehbks738kma8g-a/notedatabasetalmon
 spring.datasource.username=notedatabasetalmon_user
 spring.datasource.password=llQFkGmeUFajAwwmzT8N9jNq31UQl3eB
